--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@types/react": "18.2.64",
     "@types/react-dom": "18.2.0",
     "@types/uuid": "^9.0.8",
+    "@types/ws": "^8.5.10",
     "autoprefixer": "10.4.18",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -54,7 +55,6 @@
     "embla-carousel-react": "^8.0.0",
     "framer-motion": "^11.0.8",
     "input-otp": "^1.1.0",
-    "ioredis": "^5.3.2",
     "lucide-react": "^0.350.0",
     "next": "14.1.0",
     "next-themes": "^0.2.1",
@@ -72,6 +72,7 @@
     "typescript": "5.4.2",
     "uuid": "^9.0.1",
     "vaul": "^0.9.0",
+    "ws": "^8.16.0",
     "zod": "^3.22.4",
     "zustand": "^4.5.2"
   },
