Update Redis configuration and remove WebSocket implementation from tests

--- a/.env.example
+++ b/.env.example
@@ -14,7 +14,7 @@ NEXT_PUBLIC_ENABLE_DARK_MODE=true
 NEXT_PUBLIC_ENABLE_ANALYTICS=false
 
 # Redis Configuration
-REDIS_HOST=your-redis-host
+REDIS_HOST=your-redis-host.redis.cache.windows.net
 REDIS_PORT=6379
 REDIS_PASSWORD=your-redis-password
 REDIS_SSL=false
