--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ on:
         type: string
 
 env:
-  GHCR_REGISTRY: ghcr.io
+  DOCKER_REGISTRY: docker.io
   IMAGE_NAME: sam123ben/planning-poker
   PLATFORMS: linux/amd64,linux/arm64
 
@@ -30,7 +30,7 @@ jobs:
       - name: Docker Login
         uses: ./.github/actions/docker-login
         with:
-          ghcr-registry: ${{ env.GHCR_REGISTRY }}
+          ghcr-registry: ${{ env.DOCKER_REGISTRY }}
           github-username: sam123ben
           github-token: ${{ secrets.GITHUB_TOKEN }}
 
@@ -48,7 +48,7 @@ jobs:
       - name: Docker Login
         uses: ./.github/actions/docker-login
         with:
-          ghcr-registry: ${{ env.GHCR_REGISTRY }}
+          ghcr-registry: ${{ env.DOCKER_REGISTRY }}
           github-username: sam123ben
           github-token: ${{ secrets.CR_GH_PUBLIC_PAT }}
 
@@ -73,14 +73,14 @@ jobs:
         
       - name: Docker Login to GHCR
         run: |
-          echo "${{ secrets.CR_GH_PUBLIC_PAT }}" | docker login ghcr.io -u sam123ben --password-stdin
+          echo "${{ secrets.CR_GH_PUBLIC_PAT }}" | docker login docker.io -u sam123ben --password-stdin
           
       - name: Extract metadata for Docker
         id: meta
         uses: docker/metadata-action@v5
         with:
           images: |
-            ghcr.io/${{ env.IMAGE_NAME }}
+            docker.io/${{ env.IMAGE_NAME }}
           tags: |
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
@@ -110,8 +110,8 @@ jobs:
           platforms: linux/amd64
           file: ./Dockerfile
           tags: |
-            ghcr.io/${{ env.IMAGE_NAME }}:latest
-            ghcr.io/${{ env.IMAGE_NAME }}:${{ steps.version.outputs.version }}
+            docker.io/${{ env.IMAGE_NAME }}:latest
+            docker.io/${{ env.IMAGE_NAME }}:${{ steps.version.outputs.version }}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
