Update image references to remove GitHub Container Registry

--- a/helm/planning-poker/values.yaml
+++ b/helm/planning-poker/values.yaml
@@ -4,7 +4,7 @@ fullnameOverride: ""
 
 ## Image settings
 image:
-  repository: ghcr.io/sam123ben/planning-poker
+  repository: sam123ben/planning-poker
   tag: latest
   pullPolicy: IfNotPresent
 
